Refactor CSS variables for text color and improve formatting consistency

--- a/CSS_advanced/styles/3-style.css
+++ b/CSS_advanced/styles/3-style.css
@@ -1,17 +1,17 @@
-:root{
+:root {
     --color-primary: #d73953;
     --color-black: #090909;
     --color-white: #ffffff;
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
-    --text-color: color-black;
+    --text-color: var(--color-black);
 }
 
-body{
+body {
     color: var(--text-color);
 }
 
-a{
+a {
     color: var(--text-color);
 }
 
@@ -19,10 +19,10 @@ a{
     display: none;
 }
 
-.section-tagline{
+.section-tagline {
     color: var(--color-primary);
 }
 
-.card-category{
+.card-category {
     color: var(--color-primary);
 }
