--- a/CSS_advanced/styles/4-style.css
+++ b/CSS_advanced/styles/4-style.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior: smooth;
+}
+
 :root {
     --color-primary: #d73953;
     --color-black: #090909;
@@ -5,8 +9,8 @@
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
     --text-color: var(--color-black);
-    --fontfamily-base: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    --font-family-title: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    --fontfamily-base: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    --font-family-title: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 }
 
 body {
