--- a/CSS_advanced/styles/4-style.css
+++ b/CSS_advanced/styles/4-style.css
@@ -9,13 +9,13 @@ html{
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
     --text-color: var(--color-black);
-    --fontfamily-base: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-    --font-family-title: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    --font-family-base: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    --font-family-title: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 body {
     color: var(--text-color);
-    font-family: var(--fontfamily-base);
+    font-family: var(--font-family-base);
 }
 
 a {
