--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -38,7 +38,7 @@ html {
     --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 3rem 0;
-    --nav-item-link-hover: var(var(--color-primary));
+    --nav-item-link-hover: var(--color-primary);
     --section-tagline-margin: 0;
 }
 
@@ -111,12 +111,12 @@ a:active {
     text-transform: var(--section-tagline-transform);
     font-weight: var(--font-weight-bold);
     margin: var(--section-tagline-margin);
-    color: var(--section-title-color);
 }
 
 .container {
     width: 960px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .card-category {
@@ -181,6 +181,6 @@ ul.row {
     color: var(--text-color);
 }
 
-ul.footer {
+.footer ul{
     text-align: right;
 }
