--- a/CSS_advanced/styles/27-style.css
+++ b/CSS_advanced/styles/27-style.css
@@ -49,8 +49,13 @@ html {
     --button-hover-color: var(--color-white);
     --button-hover-text-decoration: none;
     --button-hover-background: var(--color-primary);
+    --header-padding: 4rem 0 0;
+    --header-logo-position: relative;
+    --header-logo-link-display: inline-block;
+    --header-logo-link-position: absolute;
+    --header-logo-link-top: -1rem;
+    --header-logo-link-left: 0;
 }
-
 
 body {
     color: var(--text-color);
@@ -99,6 +104,7 @@ a:active {
 .visually-hidden {
     display: none;
 }
+
 .section {
     padding: var(--section-padding);
 }
@@ -172,7 +178,7 @@ h1, h2, h3, h4, h5, h6 {
     margin: var(--nav-item-margin);
 }
 
-.nav .nav-link{
+.nav .nav-link {
     display: block;
     padding: 0.5rem 1rem;
 }
@@ -267,4 +273,19 @@ ul.row {
 
 .section-hero .section-inner {
     padding: 10rem 40rem 2rem 0;
+}
+
+.header {
+    padding: var(--header-padding);
+}
+
+.header-logo {
+    position: var(--header-logo-position);
+}
+
+.header-logo a {
+    display: var(--header-logo-link-display);
+    position: var(--header-logo-link-position);
+    top: var(--header-logo-link-top);
+    left: var(--header-logo-link-left);
 }
