--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -38,7 +38,7 @@ html {
     --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 3rem 0;
-    --nav-item-link-hover: var(--color-white);
+    --nav-item-link-hover: var(--color-primary);
     --section-tagline-margin: 0;
     --button-display: inline-block;
     --button-padding: 1.5rem 3rem;
@@ -56,7 +56,6 @@ html {
     --header-logo-link-top: -1rem;
     --header-logo-link-left: 0;
 }
-
 
 body {
     color: var(--text-color);
@@ -105,6 +104,11 @@ a:active {
 .visually-hidden {
     display: none;
 }
+
+.card-category {
+    color: var(--color-primary);
+}
+
 .section {
     padding: var(--section-padding);
 }
@@ -149,10 +153,6 @@ a:active {
     margin-right: auto;
 }
 
-.card-category {
-    color: var(--color-primary);
-}
-
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
     font-weight: var(--font-weight-bold);
@@ -179,7 +179,7 @@ h1, h2, h3, h4, h5, h6 {
     position: relative;
 }
 
-.nav .nav-link{
+.nav .nav-link {
     display: block;
     padding: 0.5rem 1rem;
 }
@@ -194,13 +194,13 @@ ul.row {
     list-style: none;
 }
 
-.col-1-3 {
-    width: 33.33%;
-}
-
-[class*="col-"] {
+[class^="col-"] {
     float: left;
     padding: 0.5rem;
+}
+
+.col-1-3 {
+    width: 33.33%;
 }
 
 .col-1-2 {
@@ -213,10 +213,20 @@ ul.row {
     color: var(--text-color);
 }
 
+ul.footer {
+    text-align: right;
+}
+
+.row::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 [data-section-theme="dark"] {
     --text-color: var(--color-white);
     --section-title-color: var(--color-white);
-    background-color: var(--color-black);
+    background: var(--color-black);
     --button-color: var(--color-white);
 }
 
@@ -239,12 +249,12 @@ ul.row {
 .card-services a {
     display: block;
     padding: 2rem;
-    background-color: var(--color-light-grey);
+    background: var(--color-light-grey);
 }
 
 .card-services a:hover {
     color: var(--color-white);
-    background-color: var(--color-primary);
+    background: var(--color-primary);
     text-decoration: none;
 }
 
@@ -269,7 +279,7 @@ ul.row {
 }
 
 .section-hero .section-title {
-    margin-bottom: 5rem;
+    margin: 5rem;
 }
 
 .section-hero .section-inner {
@@ -280,7 +290,7 @@ ul.row {
     padding: var(--header-padding);
 }
 
-.hearder-logo {
+.header-logo {
     position: var(--header-logo-position);
 }
 
