--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -1,6 +1,6 @@
 html {
     scroll-behavior: smooth;
-    font-size: 62.5%;
+    font-size: 0.625em;
 }
 
 :root {
@@ -10,8 +10,8 @@ html {
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
     --text-color: var(--color-black);
-    --font-family-base:"Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    --font-family-title:"Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-base: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    --font-family-title: 'Raleway', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
     --font-size-large: 1.8rem;
@@ -21,7 +21,7 @@ html {
     --font-weight-bold: 700;
     --line-height-small: 1.2;
     --line-height-base: 1.5;
-    --line-height-big: 1.6;
+    --line-height-big: 1.8;
     --section-header-align: center;
     --section-tagline-transform: uppercase;
     --section-title-margin: 0;
@@ -38,17 +38,17 @@ html {
     --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 3rem 0;
-    --nav-item-link-hover: var(var(--color-primary));
+    --nav-item-link-hover: var(--color-white);
     --section-tagline-margin: 0;
     --button-display: inline-block;
     --button-padding: 1.5rem 3rem;
     --button-border: 0.2rem solid var(--color-primary);
-    --button-color: color-black;
+    --button-color: var(--color-black);
     --button-text-decoration: none;
-    --button-font-size: font-size-large;
-    --button-hover-color: color-white;
+    --button-font-size: var(--font-size-large);
+    --button-hover-color: var(--color-white);
     --button-hover-text-decoration: none;
-    --button-hover-background: color-primary;
+    --button-hover-background: var(--color-primary);
     --header-padding: 4rem 0 0;
     --header-logo-position: relative;
     --header-logo-link-display: inline-block;
@@ -57,39 +57,34 @@ html {
     --header-logo-link-left: 0;
 }
 
-body {
+body, a {
     color: var(--text-color);
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
     font-weight: var(--font-weight-regular);
-    min-height: var(--line-height-base);
+    line-height: var(--line-height-base);
 }
 
-a {
-    color: var(--text-color);
+a[href] {
     text-decoration: none;
 }
 
-a:link {
-    text-decoration: none;
-}
-
-a:visited {
+a[href]:visited {
     font-style: italic;
 }
 
-a:hover {
+a[href]:hover {
     text-decoration: underline;
 }
 
-a:active {
+a[href]:active {
     background-color: var(--color-light-grey);
 }
 
 .button {
     display: var(--button-display);
     padding: var(--button-padding);
-    border-style: var(--button-border);
+    border: var(--button-border);
     font-size: var(--button-font-size);
     color: var(--button-color);
     text-decoration: var(--button-text-decoration);
@@ -102,10 +97,10 @@ a:active {
 }
 
 .visually-hidden {
-    display:none;
+    display: none;
 }
 
-.card-category {
+.card-category, .section-tagline {
     color: var(--color-primary);
 }
 
@@ -114,7 +109,8 @@ a:active {
 }
 
 .section-header {
-    padding: var(--section-header-padding)
+    text-align: var(--section-header-align);
+    padding: var(--section-header-padding);
 }
 
 .section-body {
@@ -126,37 +122,34 @@ a:active {
     text-align: var(--section-footer-align);
 }
 
-.footer {
-    padding: var(--footer-padding);
-}
-
-.section-header {
-    text-align: var(--section-header-align);
-}
-
-.section-title{
-    font-family: var(--font-family-title);
-    font-size: var(--font-size-xx-large);
-    font-weight: var(--font-weight-bold);
-
-}
 .section-tagline {
-    color: var(--color-primary);
     font-family: var(--font-family-title);
     text-transform: var(--section-tagline-transform);
     font-weight: var(--font-weight-bold);
     margin: var(--section-tagline-margin);
-    color: var(--section-title-color);
 }
 
 .container {
     width: 960px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.section-title {
+    font-family: var(--font-family-title);
+    font-size: var(--font-size-xx-large);
+    font-weight: var(--font-weight-bold);
+    margin: var(--section-title-margin);
+    color: var (--section-title-color);
 }
 
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
     font-weight: var(--font-weight-bold);
+}
+
+.footer {
+    padding: var(--footer-padding);
 }
 
 .navbar-menu {
@@ -166,8 +159,8 @@ h1, h2, h3, h4, h5, h6 {
 .nav {
     margin: 0;
     padding: 0;
-    list-style: none;
     text-align: center;
+    list-style-type: none;
 }
 
 .nav .nav-item {
@@ -177,6 +170,7 @@ h1, h2, h3, h4, h5, h6 {
     letter-spacing: var(--nav-item-letter-spacing);
     display: var(--nav-item-display);
     margin: var(--nav-item-margin);
+    position: relative;
 }
 
 .nav .nav-link {
@@ -194,11 +188,6 @@ ul.row {
     list-style: none;
 }
 
-[class^="col-"] {
-    float: left;
-    padding: 0.5rem;
-}
-
 .col-1-3 {
     width: 33.33%;
 }
@@ -213,7 +202,7 @@ ul.row {
     color: var(--text-color);
 }
 
-ul.footer {
+.footer ul {
     text-align: right;
 }
 
@@ -223,11 +212,16 @@ ul.footer {
     clear: both;
 }
 
-[data-section-theme=“dark”] {
+[class^="col-"] {
+    float: left;
+    padding: 0.5rem;
+}
+
+[data-section-theme="dark"] {
     --text-color: var(--color-white);
     --section-title-color: var(--color-white);
-    background: var(--color-black);
     --button-color: var(--color-white);
+    background: var(--color-black);
 }
 
 .footer-address {
@@ -238,7 +232,7 @@ ul.footer {
     display: block;
 }
 
-.social-link > svg {
+.social-link svg {
     fill: var(--text-color);
 }
 
@@ -249,12 +243,12 @@ ul.footer {
 .card-services a {
     display: block;
     padding: 2rem;
-    background: var(--color-light-grey);
+    background-color: var(--color-light-grey);
 }
 
 .card-services a:hover {
     color: var(--color-white);
-    background: var(--color-primary);
+    background-color: var(--color-primary);
     text-decoration: none;
 }
 
@@ -279,7 +273,7 @@ ul.footer {
 }
 
 .section-hero .section-title {
-    margin: 5rem;
+    margin-bottom: 5rem;
 }
 
 .section-hero .section-inner {
@@ -310,8 +304,8 @@ ul.footer {
     width: 0;
     height: 0.2rem;
 }
-  
-  .nav .nav-item:hover .nav-link::before {
+
+.nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
 }
@@ -321,7 +315,7 @@ ul.footer {
     overflow: hidden;
 }
 
-.card-work .card-image {
+.card-work .card-image img {
     height: 30rem;
     width: 100%;
     object-fit: cover;
@@ -333,6 +327,7 @@ ul.footer {
     top: -0.1rem;
     left: -0.1rem;
     right: -0.1rem;
+    bottom: -0.1rem;
     z-index: 1;
 }
 
@@ -352,15 +347,16 @@ ul.footer {
     display: block;
     text-decoration: none;
     padding-top: 45%;
+    position: relative;
 }
 
 .card-work .card-title a::after {
     position: absolute;
-    content: "";
     top: 0;
-    right: 0;
-    left: 0;
     bottom: 0;
+    left: 0;
+    right: 0;
+    content: "";
 }
 
 .card-work:hover .card-title {
